@@ -44,11 +44,11 @@ tarball:
 
 <u>Post-Installation</u><br><br>
 
-Report your installation (used only to satisfy my curiosity):
+Report your installation (used only to satisfy my curiosity
+about what platforms are using TMDA):
 
 <blockquote><pre>
-# ( python -c 'from TMDA.Version import *; print ALL' ) \
-  | mail jason-tmdausage@mastaler.com
+# tmda-keygen -V | mail jason-tmdausage@mastaler.com
 </blockquote></pre>
 
 Then proceed to the <a href="config.html">Configuration</a> section.
