@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Sat Feb  9 18:58:35 2002 -->
+<!-- Wed Feb 13 18:29:05 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -175,11 +175,11 @@ tarball:
 
 <u>Post-Installation</u><br><br>
 
-Report your installation (used only to satisfy my curiosity):
+Report your installation (used only to satisfy my curiosity
+about what platforms are using TMDA):
 
 <blockquote><pre>
-# ( python -c 'from TMDA.Version import *; print ALL' ) \
-  | mail jason-tmdausage@mastaler.com
+# tmda-keygen -V | mail jason-tmdausage@mastaler.com
 </blockquote></pre>
 
 Then proceed to the <a href="config.html">Configuration</a> section.
